[gd_scene load_steps=9 format=2]

[ext_resource path="res://mini-game/scenes/decor/background.tscn" type="PackedScene" id=1]
[ext_resource path="res://mini-game/scenes/decor/foreground.tscn" type="PackedScene" id=2]
[ext_resource path="res://mini-game/scenes/players/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://mini-game/MiniGame.gd" type="Script" id=4]
[ext_resource path="res://mini-game/scenes/decor/startTimerUI.tscn" type="PackedScene" id=5]
[ext_resource path="res://mini-game/scenes/spawner/spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://mini-game/scenes/decor/scoreUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://mini-game/scenes/decor/instructionsUI.tscn" type="PackedScene" id=8]

[node name="MiniGame" type="Node"]
script = ExtResource( 4 )

[node name="background" parent="." instance=ExtResource( 1 )]

[node name="foreground" parent="." instance=ExtResource( 2 )]

[node name="spawner" parent="." instance=ExtResource( 6 )]
position = Vector2( 2015.43, 970.395 )

[node name="player" parent="." instance=ExtResource( 3 )]
position = Vector2( 183.674, 888.367 )

[node name="scoreUI" parent="." instance=ExtResource( 7 )]

[node name="startTimerUI" parent="." instance=ExtResource( 5 )]

[node name="instructionsUI" parent="." instance=ExtResource( 8 )]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="SpeedTimer" type="Timer" parent="."]

[connection signal="die" from="player" to="." method="_on_player_die"]
[connection signal="hit" from="player" to="." method="_on_player_hit"]
[connection signal="score" from="player" to="." method="_on_player_score"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
